<resources>
    <string name="app_name">RipeTrack</string>
    <string name="formatted_illumination_string">%s Illumination</string>

    <string name="application_picker_string">Choose Fruit</string>
    <string name="avocado_string">Avocado</string>
    <string name="pear_string">Pear</string>
    <string name="banana_string">Banana</string>
    <string name="apple_string">Apple</string>
    <string name="mango_string">Mango</string>
    <string name="nectarine_string">Nectarine</string>
    <string name="choose_mode_string">Choose Mode</string>
    <string name="advanced_option_string">Detailed (Signature Analysis)</string>
    <string name="simple_option_string">Simple (Organic Identification)</string>
    <string name="data_capturing_mode_string">Capture Data</string>
    <string name="offline_mode_string">Offline Mode</string>
    <string name="online_mode_string">Online Mode</string>
    <string name="launch_application_button">Start</string>
    <string name="lab_string">NMSL @</string>
    <string name="school_string">SFU</string>
    <string name="estimate_ripeness_string">Estimate Ripeness</string>
<!--<string name="get_hypercube_string">Get Hypercube</string> -->
    <string name="analyze_button_text">Analyze</string>
    <string name="analysis_button_text">Analysis</string>
    <string name="classify_button_text">Classify</string>
    <string name="classify_text">Click on the image to classify</string>
    <string name="normalizing_image_string">Normalizing Image…</string>
    <string name="reconstructing_hypercube_string">Reconstructing Hypercube…</string>
    <string name="reconstruction_time_string">Reconstruction Time: %.2f s</string>
    <string name="classification_time_string">Classification Time: %d ms</string>
    <string name="simple_mode_signature_string">"Cropped Box - Center: (x: %1d, y: %2d)"</string>
    <string name="classification_probabilities_string">Prob: %s</string>

    <string name="halogen_string">Halogen</string>
    <string name="led_string">LED</string>
    <string name="cfl_string">CFL</string>
    <string name="arbitrary_string">Mix</string>
    <string name="plus_string">+</string>
    <string name="minus_string">-</string>
    <string name="capture_description">Capture Image</string>
    <string name="object_id_string">Fruit ID: %2d</string>
    <string name="tab_layout_description">Tab layout</string>
    <string name="reload_capture_fragment_string">Re-capture the images</string>
    <string name="information_button_string">Show information regarding the fragment</string>

    <string name="no_nir_warning">No NIR Camera found.</string>
    <string name="coming_soon_information_string">This application is Coming Soon!</string>
    <string name="application_selector_information_string">Scroll the respective wheels to:\n(1) Choose a fruit to track its ripeness and remaining lifetime.\n(2) Choose online mode to capture an image or offline mode to choose a ready pair of images for reconstruction, useful for phones without an NIR camera.</string>
<!--    <string name="application_selector_information_string">We can track the ripeness and remaining lifetime of five different fruits (Pear, Avocado, Banana, Mango, Nectarine). Scroll the wheel and select any of the applications.\nChoose which mode you\'d like to test the application on: Offline Mode lets the user use pre-existing images to be used in our models, It will also enable the user to test our model on android phones which do not have a NIR camera (by using our own provided images). So pressing it will allow the user to run the app and on the next page will require the user to input two images (RGB and NIR)</string>-->
    <string name="application_selector_information_string_old">We have three different applications that we have worked on: Organic classification (Apples, Kiwi, Blueberries), Olive Oil Adulteration, Kiwi Organic Classification. Scroll the wheel and select any of the applications.\nChoose which mode you\'d like to test the application on: Offline Mode lets the user use pre-existing images to be used in our models, It will also enable the user to test our model on android phones which do not have a NIR camera (by using our own provided images). So pressing it will allow the user to run the app and on the next page will require the user to input two images (RGB and NIR).</string>
    <string name="capture_information_string">Clicking the camera capture button captures both RGB and NIR image, back to back, to make it easy to align the two images.\nThe camera will not capture photo if the lighting conditions are not adequate.</string>
    <string name="image_viewer_information_string">Swipe through the two RGB and NIR images.\n<b>Tap</b> on any part of the image to get a 64 * 64 bounding box which will be used for reconstruction.\nFirst <b>Tap</b> will place the bounding box directly in the middle, <b>tap</b> again to place it anywhere on the image you want.</string>
    <string name="image_viewer_information_string_old">Swipe through the two RGB and NIR images. <b>Tap</b> on any part of the image to get a 64 * 64 bounding box which will be used in the Reconstruction phase. <b>Tap</b> to use a patched image, not tapping anywhere will use the whole image for Spectral Reconstruction.\nFirst <b>Tap</b> will place the bounding box directly in the middle, <b>Tap</b> again to place it anywhere on the image you want.</string>
    <string name="reconstruction_analysis_information_string">Tap on the \"Analysis\" button to show the signature at a particular pixel.\nWhile on the \"Analysis\" page <b>Tap</b> on the Back button to go back to the classification page.\n<b>Tap</b> anywhere on any pixel to get its signature.\n<b>Tap and Hold</b> to show a new signature and delete all other persistent signature analysis.</string>
    <string name="reconstruction_analysis_information_string_old">Swipe through the reconstructed Hypercube bands.\nTap on the \"Analysis\" button to show the signature at a particular pixel.\nWhile on the \"Analysis\" page <b>Long Tap</b> on the GraphView to go back to the original page.\n<b>Tap</b> anywhere on any pixel to get its signature to be run through the classifier.\n<b>Tap and Hold</b> to show a new signature and delete all other persistent signature analysis.</string>
    <string name="reconstruction_analysis_information_simple_string">Swipe through the reconstructed Hypercube bands.\nIn the simple mode, the application just checks the signature of the middle pixel.</string>

    <string name="ripeness_unripe">Unripe</string>
    <string name="ripeness_ripe">Ripe</string>
    <string name="ripeness_expired">Expired</string>

    <string name="remaining_lifetime_placeholder">%d%% Remaining Lifetime</string>


</resources>